tests/mysql/ui-common/top_sql_wrong_param_name_in_map.stderr
error: sql_forge!: parameter :user_id is unused in the SQL template
 --> tests/mysql/tmp-ui/top_sql_wrong_param_name_in_map.rs:9:12
  |
9 |         ( :user_id = 1i64 ),
  |            ^^^^^^^
